--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ h3 {
     margin-left: 20px;
 }
 
-
 .navbar .menu {
     text-align: right;
     position: absolute;
@@ -138,32 +137,12 @@ h3 {
 
 .middle::after {
     content: '';
-    background-image: linear-gradient(to bottom, #540d36, #641c35);
+    background-image: linear-gradient(to bottom, #540d36, #6d1e3a);
     height: 500px;
     width: 100%;
     position: absolute;
     top: 0;
 }
-
-/*.middle {
-    width: 100%;
-    height: 50%;
-    max-width: 1440px;
-    padding-top: 15px;
-    padding-left: 50px;
-    background: #611935;
-
-}
-
-/*.middle h2 {
-    font-family: 'Germania One', cursive;
-    font-size: 50px;
-    text-align: center;
-    color: #fff;
-    padding: 50px;
-    font-display: flex;
-    letter-spacing: 3px;
-}*/
 
 #about {
     width: 90%;
@@ -175,8 +154,8 @@ h3 {
 }
 
 #about .logo {
-    max-width: 255px;
-    padding: 20px 0;
+    max-width: 300px;
+    padding: 15px 0;
     margin: 0 auto;
 }
 
@@ -187,7 +166,7 @@ h3 {
 
 .about-box {
     background: url(../img/bg-about.jpg) no-repeat 90% 90%, #fff6ec;
-    padding: 50px;
+    padding: 70px;
     margin-top: 10px;
 }
 
@@ -200,12 +179,6 @@ h3 {
     text-align: justify;
 }
 
-#about h3 {
-    font-family: 'Germania One', cursive;
-    font-size: 58px;
-    letter-spacing: 1px;
-}
-
 #about p {
     font-size: 18px;
     line-height: 27px;
@@ -215,22 +188,295 @@ h3 {
 
 .vector-img {
     position: absolute;
-    top: 60px;
-    right: -30px;
+    top: 70px;
+    right: -55px;
+}
+
+#campaigns {
+    margin: 100px auto 0;
+    max-width: 1280px;
+    width: 90%;
+}
+
+#campaigns h3 {
+    text-align: center;
+    position: relative;
+    padding-top: 60px;
+    margin-top: -60px;
+}
+
+.campaign-slide {
+    margin-top: 45px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.swiper-pointer-events {
+    touch-action: pan-y;
+}
+
+.swiper {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    padding: 0;
+    z-index: 1;
+}
+
+.swiper-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    box-sizing: content-box;
+}
+
+.slide-card {
+    width: 30%;
+    border: solid 3px #500c7a;
+    background: #fff;
+    height: 536px;
+    position: relative;
+}
+
+.gradient {
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0,0,0,0));
+    height: 50%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.slide-card a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.campaign-logo {
+    position: absolute;
+    bottom: 30px;
+    display: flex;
+    width: 100%;
+    padding: 10px;
+    justify-content: center;
+}
+
+element.style {
+    transform: translate3d(-935px, 0px, 0px);
+    transition-duration: 0ms;
+}
+
+#arkemyr {
+    background-image: url(../img/castle.jpg);
+    background-position: 35% 50%;
+    background-size: cover;
+}
+
+#bvale {
+    background-image: url(../img/feywild.jpg);
+    background-position: 60% 50%;
+    background-size: cover;
+}
+
+#bvale .campaign-logo {
+    bottom: 45px;
+    padding: 10px 25px;
+}
+
+#leviathan {
+    background-image: url(../img/pirate.jpg);
+    background-position: 60% 50%;
+    background-size: cover;
+}
+
+#tavern {
+    background-image: url(../img/tavern.jpg);
+    background-position: 20% 50%;
+    background-size: cover;
+}
+
+.slide-card .campaign-logo img {
+    display: block;
+    width: 100%;
+}
+
+#leviathan .campaign-logo img {
+    max-width: 331px;
+}
+
+#tavern .campaign-logo img {
+    max-width: 258px;
+}
+
+.campaign-slide-nav {
+    margin-top: 25px;
+    font-size: 24px;
+    color: #500c7a;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.campaign-slide-nav > * {
+    border: solid 2px #500c7a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+}
+
+.campaign-slide-nav > *:hover {
+    background-color: #500c7a;
+    color: #fff;
+}
+
+.slide-prev {
+    margin-right: -2px;
+}
+
+.ri-arrow-left-line {
+    font-family: 'remixicon' !important;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    color: #500c7a;
+}
+
+.ri-arrow-left-line:before {
+    content: "\ea60";
+}
+
+
+#newsletter {
+    text-align: center;
+    padding: 60px;
+    background: #efefef;
+    position: relative;
+    margin: 100px 0 50px;
+    line-height: 1.5;
+}
+
+#newsletter::after {
+    content: '';    
+    background: url(../img/shelves.png);
+    background-position: 50% 70%;
+    opacity: 0.1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.newsletter-content h3 {
+    color: #500c7a;
+    font-size: 48px;
+}
+
+.newsletter-content {
+    max-width: 770px;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    z-index: 5;
+}
+
+.newsletter-content form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.newsletter-content input {
+    width: 60%;
+    border: solid 2px #500c7a; 
+    padding: 15px;
+}
+
+.newsletter-content input::placeholder {
+    color: #a996b2;
+    font-family:'Syne', sans-serif;
+}
+
+.newsletter-content button {
+    width: 15%;
+    background-image: linear-gradient(to right, #540e7a, #9a2d86);
+    border:  none;
+    color: white;
+    font-family: 'Syne', sans-serif;
+    font-weight: 800;
+    border-radius: 0px 5px;
+    margin-left: 10px;
+    cursor: pointer;
+}   
+
+.newsletter-content button:hover {
+    background: #500c7a;
 }
 
 @media only screen and (max-width: 900px) {
-    .container {
-        padding: 0 10px 15px;
+    #hero {
+        padding: 0;
+    }
+
+    .cta {
+        width: 90%;
     }
 }
 
-@media only screen and (max-width: 768px) {
-    
-}
-
 @media only screen and (max-width: 425px) {
-    .familia-list li{
+    body {
+        font-size: 14px;
+    }
+    h3 {
+        font-size: 26px;
+    }
+    .float-img {
+        display: none;
+    }
+    #about {
+        padding-top: 50px;
+    }
+    .about-content p {
+        font-size: 14px;
+        line-height: 18px;
+    }
+    .about-content h3 {
+        margin-bottom: 15px;
+    }
+    .about-content blockquote {
+        margin: 10px 0;
+        border-left: none;
+        border-top: solid 4px #d9c1a4;
+        background: #fff;
+        padding: 10px;
+    }
+    #campaign {
+        margin-top: 50px;
+    }
+    .campaign-slide {
+        margin-top: 20px;
+    }
+    #newsletter {
+        margin-top: 50px;
+    }
+    #newsletter form {
+        display: block;
+    }
+    #newsletter input {
         width: 100%;
+    }
+    #newsletter button {
+        width: 100%;
+        margin-top: 10px;
+        padding: 10px 0;
     }
 }
