--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ element.style {
 
 #newsletter::after {
     content: '';    
-    background: url(../img/shelves.png);
+    background: url('../img/Shelves.png');
     background-position: 50% 70%;
     opacity: 0.07;
     position: absolute;
